# TemplateAIRAG

./: .env.example  .gitignore  BACKEND-FASE-02-COMPLETATA.md  FASE-01-COMPLETATA.md  FRONTEND-COMPLETATO.md  FRONTEND-SISTEMA-COMPLETATO.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  auth_routes.py  chat.py  health.py  users.py
backend/app/core/: __init__.py  advanced_logging.py  database.py  database_init.py  logging.py  logging_config.py  security.py
backend/app/services/: __init__.py  auth_service.py  azure_ai_service.py  chat_service.py
data/mongodb/scripts/: init-db.js
fasi/: 00-INDICE-GENERALE.md  01-setup-infrastrutturale.md  02-backend-core.md  03-frontend-base.md  04-sistema-chat-ai.md  05-sistema-rag-avanzato.md  06-pannello-amministrativo.md  07-sistema-indicizzazione.md  08-sicurezza-mfa.md  09-monitoring-avanzato.md  10-testing-deployment.md  architettura-sistema.md  checklist-qualita.md  considerazioni-tecniche.md  dipendenze-fasi.md
frontend/: .env.example  .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: login-form.tsx
frontend/src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
frontend/src/components/routes/: app-routes.tsx  protected-route.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/hooks/: use-auth.ts  use-media-query.ts
frontend/src/pages/: dashboard.tsx  login.tsx
frontend/src/services/: auth-service.ts
frontend/src/store/: auth-store.ts  ui-store.ts
frontend/src/types/: auth.ts  ui.ts
monitoring/grafana/data/: .gitkeep
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/loki/: config.yml
monitoring/promtail/: config.yml
nginx/data/: .gitkeep
nginx/letsencrypt/: .gitkeep
scripts/: backup.bat  start-services.bat  start.bat  status.bat  stop.bat
uploads/: .gitkeep
